RIP-v10.4- /mobile overflow fix in progress

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,8 @@ body {
   justify-content: flex-start;
   align-items    : center;
   width          : 100%;
-  height         : 100%;
+  height         : 100vh;
+  overflow: hidden;
 
   max-width: 3080px;
 
